deploy/eap-ubi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eap72
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eap72
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: eap72
    spec:
      containers:
      - name: eap72
        image: eap72:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 500m
          limits:
            cpu: 750m
---
apiVersion: v1
kind: Service
metadata:
  name: eap72
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
    app: eap72
